<resources>
    <string name="app_name">CarSwop</string>

    <string name="hello_world">Hello world!</string>

    <!-- Toolbar in menu/menu_login -->
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- activity_login -->
    <string name="etLogin">Username</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Log in !</string>
    <string name="tvNyr">Not yet register?</string>
    <string name="title_activity_register">Register</string>
    <string name="tvMoto">The right car at the right time</string>

    <!-- activity_register -->
    <string name="tvError"></string>
    <string name="etBankAccount">Bank account number</string>
    <string name="etName">Name</string>
    <string name="etUsername">Username</string>
    <string name="etMail">E-Mail</string>
    <string name="etConfirmMail">Confirm E-mail</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_tab_account">TabAccount</string>
    <string name="tvPrivateData">Only visible during transactions</string>
    <string name="tvMandatory">Mandatory</string>

    <!-- tab_personnal_space -->
    <string name="tvUsername">Username</string>
    <string name="tvMail">E-mail</string>
    <string name="tvRanking">Ranking</string>
    <string name="tvEditableRanking">4/100</string>
    <string name="tvSettings">Settings</string>
    <string name="tvLogout">Logout</string>
    <string name="tvMyCar">My cars</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_car_settings">CarSettings</string>

    <!-- activity_car_settings-->
    <string name="etBrand">Brand</string>
    <string name="etModel">Model</string>
    <string name="etLicencePlate">Licence plate</string>
    <string name="tvFuelCons">Fuel consumption</string>
    <string name="tvValueFuelCons">0.0</string>
    <string name="tvValueCo2Cons">0.0</string>
    <string name="tvUnitFuel">l/100Kms</string>
    <string name="tvCo2Cons">C02 consumption</string>
    <string name="tvConsC02Unit">g/Km</string>
    <string name="tvValuePriceHtva">0.0</string>
    <string name="tvValueLeasePrice">0.0</string>
    <string name="tvPriceHtva">Excl. TVA price</string>
    <string name="tvLeasePrice">Leasing price</string>
    <string name="tvLeaseUnit">per month</string>
    <string name="euro">€</string>
    <string name="btnSaveCar">Save car</string>
    <string name="tvEnergy">Energy</string>
    <string name="chooseFuel">Choose Fuel</string>
    <string name="btnCancelNumberPicker">Cancel</string>
    <string name="btnSetNumberPicker">Set</string>
    <string-array name="fuel_array">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Gas</item>
        <item>Electricity</item>
    </string-array>

    <!--activity_custom_personnal_car_row-->
    <string name="tvCarName">Car Name</string>
    <string name="title_activity_list_personnal_cars">ListPersonnalCars</string>

    <!-- menu_list_personnal_cars-->
    <string name="menuAddCar">Add a car</string>

    <!--activity_tab_search -->
    <string name="tvBrand">Brand</string>
    <string name="btnSelectBrand">Select </string>
    <string name="tvMaxCons">max</string>
    <string name="tvCons">Consumption</string>
    <string name="hChoose">Choose...</string>
    <string name="tvNbSit">Number of seats</string>
    <string name="tvCarDetails">Search a car to </string>
    <string name="tvRentOrSwop">RENT</string>
    <string name="tvPeriod">Period</string>
    <string name="tvFrom">From</string>
    <string name="tvTo">To</string>
    <string name="tvAt">at</string>
    <string name="tvKms">kms</string>
    <string name="tvEstimatedMileage">Estimated mileage</string>
    <string name="tvPickDate">Pick date</string>
    <string name="tvExchange">Exchange</string>
    <string name="tvTime">Choose time</string>
    <string name="btnSearch">Search</string>

    <!-- activity_list_specific_car -->
    <string name="btnSendRequestToSelectedPeople">Send request to the selected people</string>

    <!-- custom_specific_car_row -->
    <string name="tvOwner">Owner</string>
    <string name="tvEstimatedPrice">Est. price</string>

    <!--- fragment_tab_operations -->
    <string name="tvRequestFrom">Request from</string>
    <string name="tvTransactionDetails">Check the requests I </string>
    <string name="tvReceivedOrSent">RECEIVED</string>
    <string name="tvUserSource">Name</string>
    <string name="tvCanIUse">Can I use your</string>
    <string name="btnValidate">For sure</string>
    <string name="btnCancel">Sorry</string>
    <string name="btnCheckRequestsReceived">Received</string>
    <string name="btnCheckRequestAccepted">Accepted</string>
    <string name="tvSetOdometer">Set Odomoter (Kms)</string>
    <string name="btnOk">OK</string>

    <!-- activity_accept_owner-->
    <string name="btnSelectOwner">Select owner</string>

    <!-- custom_request_data-->
    <string name="tvNbRequestSent">Request(s) sent</string>
    <string name="tvNbrequestAccepted">Accepted</string>
    <string name="tvNbRequestRefuted">Refuted</string>
    <string name="tvNbRequestNoAnswer">No answer</string>

    <!-- General String-->
    <string name="menuExit">Exit</string>
    <string name="menuSettings">Settings</string>
    <string name="title_modify_car">Modify car</string>
    <string name="title_activity_tab_search_car">TabSearchCar</string>
    <string name="action_delete_car">Delete</string>
    <string name="title_activity_NotificationUser">Notification User</string>
    <string name="tvDate">Date</string>
    <string name="tvHour">Time</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_specific_cars">ListSpecificCars</string>
    <string name="title_activity_request_received">RequestReceived</string>
    <string name="title_activity_accept_owner">AcceptOwner</string>
    <string name="title_activity_request_data">RequestData</string>
    <string name="title_activity_select_owner">SelectOwner</string>
    <string name="title_activity_accepted_request">AcceptedRequest</string>

</resources>
