<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRequestFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tvRequestFrom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvUserSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUserSource"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toEndOf="@+id/tvRequestFrom"
        android:layout_toRightOf="@+id/tvRequestFrom"
        android:layout_alignBottom="@+id/tvRequestFrom"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvCanIUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCanIUse"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tvRequestFrom"
        android:layout_alignLeft="@+id/tvRequestFrom"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBrand"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/tvCanIUse"
        android:layout_alignLeft="@+id/tvUserSource"
        android:layout_toRightOf="@+id/tvCanIUse"
        android:layout_toEndOf="@+id/tvCanIUse" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvModel"
        android:layout_toEndOf="@+id/tvBrand"
        android:layout_toRightOf="@+id/tvBrand"
        android:layout_alignTop="@+id/tvBrand"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvFrom"
        android:layout_below="@id/tvCanIUse"
        android:layout_alignLeft="@+id/tvCanIUse"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tvFrom"
        android:layout_toRightOf="@+id/tvFrom"
        android:layout_alignBottom="@+id/tvFrom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvDate"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvTo"
        android:layout_below="@id/tvFrom"
        android:layout_alignLeft="@id/tvFrom"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tvTo"
        android:layout_toRightOf="@+id/tvTo"
        android:layout_alignBottom="@+id/tvTo"
        android:layout_alignLeft="@+id/tvDateFrom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvDate" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnValidate"
        android:layout_marginTop="30dp"
        android:width="150dp"
        android:layout_below="@+id/tvTo"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:width="150dp"
        android:layout_alignTop="@+id/btnValidate"
        android:layout_toEndOf="@+id/btnValidate"
        android:layout_toRightOf="@+id/btnValidate"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="30dp" />

</RelativeLayout>