<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRequestFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tvRequestFrom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvUserSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUserSource"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toEndOf="@+id/tvRequestFrom"
        android:layout_toRightOf="@+id/tvRequestFrom"
        android:layout_alignBottom="@+id/tvRequestFrom"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvCanIUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCanIUse"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tvRequestFrom"
        android:layout_alignLeft="@+id/tvRequestFrom"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBrand"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/tvCanIUse"
        android:layout_alignLeft="@+id/tvUserSource"
        android:layout_toRightOf="@+id/tvCanIUse"
        android:layout_toEndOf="@+id/tvCanIUse" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvModel"
        android:layout_toEndOf="@+id/tvBrand"
        android:layout_toRightOf="@+id/tvBrand"
        android:layout_alignTop="@+id/tvBrand"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvFrom"
        android:layout_below="@id/tvCanIUse"
        android:layout_alignLeft="@+id/tvCanIUse"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvDate"
        android:layout_alignTop="@id/tvFrom"
        android:layout_toEndOf="@+id/tvFrom"
        android:layout_toRightOf="@+id/tvFrom"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvAtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvAt"
        android:layout_alignTop="@+id/tvFrom"
        android:layout_toEndOf="@+id/tvFrom"
        android:layout_toRightOf="@+id/tvFrom"
        android:layout_alignLeft="@+id/tvUserSource"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/tvTimeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvHour"
        android:layout_toEndOf="@+id/tvAtFrom"
        android:layout_alignTop="@+id/tvAtFrom"
        android:layout_toRightOf="@+id/tvAtFrom"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvTo"
        android:layout_below="@id/tvFrom"
        android:layout_alignLeft="@id/tvFrom"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvDate"
        android:layout_alignTop="@id/tvTo"
        android:layout_toRightOf="@+id/tvTo"
        android:layout_alignLeft="@+id/tvDateFrom"
        android:layout_toEndOf="@+id/tvTo" />

    <TextView
        android:id="@id/tvAtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvAt"
        android:layout_alignTop="@+id/tvTo"
        android:layout_alignLeft="@+id/tvAtFrom" />

    <TextView
        android:id="@+id/tvTimeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvHour"
        android:layout_toEndOf="@+id/tvAtTo"
        android:layout_alignLeft="@+id/tvTimeFrom"
        android:layout_toRightOf="@+id/tvAtTo"
        android:layout_alignTop="@id/tvAtTo"/>

</RelativeLayout>

