<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tvSetOdometer"
        android:text="@string/tvSetOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etSetOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="120dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/tvSetOdometer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etSetOdometer" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelNumberPicker"
            android:layout_marginLeft="40dp" />

        </LinearLayout>

</RelativeLayout>