<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:src="@drawable/login_carswop" />

    <TextView
        android:id="@+id/tvMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:background="@color/black"
        android:text="@string/tvMoto"
        android:textColor="@color/grey" />

    <ImageView
        android:id="@+id/ivLogoCars"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/login_cars" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogoCars"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-110dp"
        android:width="200dp"
        android:hint="@string/etLogin"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:width="200dp"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_loginbtn" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/register" />

    <ImageView
        android:id="@+id/ivLogoKibundi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/btnRegister"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/ivTitle"
        android:layout_toRightOf="@+id/ivTitle"
        android:src="@drawable/login_kibundi" />


</RelativeLayout>
